Community section add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <section>
-        <div class="introduction-flex">
+        <div class="introduction-section flex">
             <div class="introduction-information">
                 <div class="introduction-title">
                     <h1>Hi, i'm a web developer</h1>
@@ -25,7 +25,7 @@
                     <p>I'm Md Monirul Islma from a small beautiful country Bangladesh. I’m a passionate and pragmatic
                         front end developer with 2 years of professional experience, specializing in full-stack
                         development using Php Technologies on the backend.</p>
-                    <button id="hire-me">HIRE ME</button>
+                    <button class="button">HIRE ME</button>
                 </div>
             </div>
             <div class="introduction-img">
@@ -37,7 +37,7 @@
     <section>
         <div class="mission-section">
             <h2>My Mission in <span id="mission-span">2022</span></h2>
-            <div class="mission-flex">
+            <div class="mission flex">
                 <div class="mission-items bg-1">
                     <img src="mis-icon/illustrator-1.png" alt="">
                     <h4>Mission</h4>
@@ -55,7 +55,44 @@
                 </div>
             </div>
         </div>
+
     </section>
+
+    <section>
+        <div class="develop-section flex">
+            <div class="develop-img">
+                <img src="img/coding.png" alt="">
+            </div>
+            <div class="develop-text">
+                <h2>Develop</h2>
+                <h2>Without Limits</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat hic quibusdam fuga ullam tempore
+                    aperiam blanditiis ea voluptas animi possimus!</p>
+                <button class="button">Read the Documentation</button>
+            </div>
+        </div>
+    </section>
+
+    <section">
+        <div class="community-section flex">
+            <div class="community-text">
+                <h2>Know our</h2>
+                <h2>Global Community</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis ab aperiam distinctio quo
+                    corporis, quibusdam tenetur voluptate laborum nobis temporibus ducimus, quia suscipit repellendus
+                    enim qui numquam sequi libero dolore!</p>
+                <button class="button">Read the Documentation</button>
+            </div>
+            <div class="community-img">
+                <img src="img/project.png" alt="">
+            </div>
+        </div>
+        </section>
+
+        <footer>
+            <h3>Mission <span id="footer-span">2022</span></h3>
+            <p>&copy; Crafted with 💘 in Bangladesh</p>
+        </footer>
 </body>
 
 </html>
