blog section add

--- a/index.html
+++ b/index.html
@@ -88,7 +88,45 @@
             </div>
         </div>
         </section>
-
+        <section>
+            <div class="blog-section">
+                <h2>some <span id="blog"> writing </span> articles</h2>
+                <div class="blog flex">
+                    <div class="blog-item">
+                        <div class="blog-img">
+                            <img src="blog/blog-1.jpeg" alt="">
+                        </div>
+                        <div class="blog-text">
+                            <h3>Apple laptop</h3>
+                            <p>Today we will talk about Apple Loptop. The number 1 in the world is Apples</p>
+                            <button class="blog-button">Read More</button>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div class="blog-img">
+                            <img src="blog/blog-2.jpg" alt="">
+                        </div>
+                        <div class="blog-text">
+                            <h3>samsung Phon</h3>
+                            <p>Now samsung is one of the most popular phones of all time</p>
+                            <button class="blog-button">Read More</button>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div class="blog-img">
+                            <img src="blog/blog-3.jpg" alt="">
+                        </div>
+                        <div class="blog-text">
+                            <h3>Book</h3>
+                            <p>Books are good friends of people.
+                                Something good can be learned by reading books
+                            </p>
+                            <button class="blog-button">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer>
             <h3>Mission <span id="footer-span">2022</span></h3>
             <p>&copy; Crafted with 💘 in Bangladesh</p>
