Mission section add

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mission-2022</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
@@ -22,10 +23,13 @@
                     <h2 id="intro-name">Md Monirul Islam</h2>
                 </div>
                 <div class="introduction-about">
-                    <p>I'm Md Monirul Islma from a small beautiful country Bangladesh. I’m a passionate and pragmatic
+                    <p class="pra-style">I'm Md Monirul Islma from a small beautiful country Bangladesh. I’m a
+                        passionate and pragmatic
                         front end developer with 2 years of professional experience, specializing in full-stack
                         development using Php Technologies on the backend.</p>
-                    <button class="button">HIRE ME</button>
+                    <button class="button">
+                        See more Details
+                    </button>
                 </div>
             </div>
             <div class="introduction-img">
@@ -40,18 +44,18 @@
             <div class="mission flex">
                 <div class="mission-items bg-1">
                     <img src="mis-icon/illustrator-1.png" alt="">
-                    <h4>Mission</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, perferendis?</p>
+                    <h4>Web developer</h4>
+                    <p class="pra-style">In 2022, my quick mission is to be web design and develop </p>
                 </div>
                 <div class="mission-items bg-2">
                     <img src="mis-icon/illustrator-2.png" alt="">
-                    <h4>Vission</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, perferendis?</p>
+                    <h4>Teacher</h4>
+                    <p class="pra-style">I want to be a good teacher in 2022.My favourite profession</p>
                 </div>
                 <div class="mission-items bg-3">
                     <img src="mis-icon/illustrator-3.png" alt="">
-                    <h4>Goals</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, perferendis?</p>
+                    <h4>Businessman</h4>
+                    <p class="pra-style">I like to do business very much.I want to be a business man in 2022</p>
                 </div>
             </div>
         </div>
@@ -64,10 +68,12 @@
                 <img src="img/coding.png" alt="">
             </div>
             <div class="develop-text">
-                <h2>Develop</h2>
-                <h2>Without Limits</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat hic quibusdam fuga ullam tempore
-                    aperiam blanditiis ea voluptas animi possimus!</p>
+                <h2>learn</h2>
+                <h2>Web development</h2>
+                <p class="pra-style">Go from no-code to an in-demand junior web developer, at a fraction of the cost of
+                    a bootcamp. Start
+                    with the front-end by learning HTML, CSS, and JavaScript. Then, master the back-end and APIs to
+                    round out your full-stack skills. To start this Skill Path,Read the Documentation</p>
                 <button class="button">Read the Documentation</button>
             </div>
         </div>
@@ -78,10 +84,13 @@
             <div class="community-text">
                 <h2>Know our</h2>
                 <h2>Global Community</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis ab aperiam distinctio quo
-                    corporis, quibusdam tenetur voluptate laborum nobis temporibus ducimus, quia suscipit repellendus
-                    enim qui numquam sequi libero dolore!</p>
-                <button class="button">Read the Documentation</button>
+                <p class="pra-style">Those who have the time and want to be a moderator, to take responsibility and
+                    contribute to the
+                    community, fill out the form by clicking the button below. We will make a short list based on your
+                    response and create a poll on Friday evening. From there, we will first appoint five moderators. If
+                    we need more moderators later, we will appoint a new moderator from this list.
+                    Thanks</p>
+                <button class="button">Sign up now</button>
             </div>
             <div class="community-img">
                 <img src="img/project.png" alt="">
@@ -90,7 +99,9 @@
         </section>
         <section>
             <div class="blog-section">
-                <h2>some <span id="blog"> writing </span> articles</h2>
+                <h2>some <span id="blog">
+
+                        writing </span> articles</h2>
                 <div class="blog flex">
                     <div class="blog-item">
                         <div class="blog-img">
@@ -98,7 +109,8 @@
                         </div>
                         <div class="blog-text">
                             <h3>Apple laptop</h3>
-                            <p>Today we will talk about Apple Loptop. The number 1 in the world is Apples</p>
+                            <p class="pra-style">Today we will talk about Apple Loptop. The number 1 in the world is
+                                Apples</p>
                             <button class="blog-button">Read More</button>
                         </div>
                     </div>
@@ -107,8 +119,8 @@
                             <img src="blog/blog-2.jpg" alt="">
                         </div>
                         <div class="blog-text">
-                            <h3>samsung Phon</h3>
-                            <p>Now samsung is one of the most popular phones of all time</p>
+                            <h3>Samsung Phon</h3>
+                            <p class="pra-style">Now samsung is one of the most popular phones of all time</p>
                             <button class="blog-button">Read More</button>
                         </div>
                     </div>
@@ -118,7 +130,7 @@
                         </div>
                         <div class="blog-text">
                             <h3>Book</h3>
-                            <p>Books are good friends of people.
+                            <p class="pra-style">Books are good friends of people.
                                 Something good can be learned by reading books
                             </p>
                             <button class="blog-button">Read More</button>
