somting style add

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                     <h2 id="intro-name">Md Monirul Islam</h2>
                 </div>
                 <div class="introduction-about">
-                    <p class="pra-style">I'm Md Monirul Islma from a small beautiful country Bangladesh. I’m a
-                        passionate and pragmatic
-                        front end developer with 2 years of professional experience, specializing in full-stack
-                        development using Php Technologies on the backend.</p>
+                    <p class="pra-style">I'm Md Monirul Islam from a small beautiful country Bangladesh. I’m a
+                        passionate and programmatic front end developer with 2 years of professional experience,
+                        specializing in full-stack development using Node.js Technologies on the backend.</p>
                     <button class="button">
                         See more Details
                     </button>
@@ -99,9 +98,7 @@
         </section>
         <section>
             <div class="blog-section">
-                <h2>some <span id="blog">
-
-                        writing </span> articles</h2>
+                <h2>some <span id="blog"> written </span> articles</h2>
                 <div class="blog flex">
                     <div class="blog-item">
                         <div class="blog-img">
@@ -119,7 +116,7 @@
                             <img src="blog/blog-2.jpg" alt="">
                         </div>
                         <div class="blog-text">
-                            <h3>Samsung Phon</h3>
+                            <h3>Samsung Phone</h3>
                             <p class="pra-style">Now samsung is one of the most popular phones of all time</p>
                             <button class="blog-button">Read More</button>
                         </div>
